--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+node_modules
+/node_modules
 
 node_modules/*
 dist
@@ -23,7 +25,6 @@ dist-ssr
 *.sln
 *.sw?
 
-!node_modules/.vite
 
 **/tempobook/dynamic/
 **/tempobook/storyboards/
